--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,3 +1,191 @@
 body {
     background: #fafafa;
+    color: #282828;
+    font-family: 'Nunito', sans-serif;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+#loading {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    .bars {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 60px;
+        div {
+            width: 6px;
+            background-color: white;
+            border-radius: 5px;
+            &:not(:last-of-type) {
+                margin-right: 6px;
+            }
+            &:first-of-type {
+                height: 33px;
+                animation: bar1 2s linear infinite;
+                background-color: #cff09e;
+            }
+            &:nth-of-type(2) {
+                height: 60px;
+                animation: bar2 2s linear infinite;
+                background-color: #a8dba8;
+            }
+            &:nth-of-type(3) {
+                height: 40px;
+                animation: bar3 2s linear infinite;
+                background-color: #79bd9a;
+            }
+            &:nth-of-type(4) {
+                height: 27px;
+                animation: bar4 2s linear infinite;
+                background-color: #3b8686;
+            }
+        }
+    }
+    h2 {
+        margin: 10px 0 0 0;
+        // color: white;
+        font-weight: bold;
+        font-size: 21px;
+        font-family: 'Nunito', sans-serif;
+    }
+}
+
+@keyframes bar1 {
+    0% {
+        height: 33px;
+    }
+    25% {
+        height: 57px;
+    }
+    50% {
+        height: 42px;
+    }
+    75% {
+        height: 52px;
+    }
+}
+
+@keyframes bar2 {
+    0%{
+        height: 60px;
+    }
+    25% {
+        height: 35px;
+    }
+    50% {
+        height: 54px;
+    }
+    75% {
+        height: 43px;
+    }
+}
+
+@keyframes bar3 {
+    0%{
+        height: 40px;
+    }
+    25% {
+        height: 27px;
+    }
+    50% {
+        height: 40px;
+    }
+    75% {
+        height: 57px;
+    }
+}
+
+@keyframes bar4 {
+    0%{
+        height: 27px;
+    }
+    25% {
+        height: 52px;
+    }
+    50% {
+        height: 28px;
+    }
+    75% {
+        height: 47px;
+    }
+}
+
+.app-container {
+    .colours {
+        margin: 20px 20px;
+        padding: 0;
+        display: flex;
+        flex-wrap: wrap;
+        li {
+            list-style: none;
+            margin: 20px;
+            min-width: 260px;
+            width: calc((100% / 5) - 40px);
+            text-align: center;
+            .hex-group {
+                height: 75px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                .hex {
+                    height: 57px;
+                    width: 6px;
+                    border-radius: 100px;
+                    cursor: pointer;
+                    overflow: hidden;
+                    transition: height 250ms ease-in-out, width 250ms ease-in-out, border-radius 0ms ease-in-out;
+                    &:not(:last-of-type) {
+                        margin-right: 6px;
+                    }
+                    span {
+                        display: none;
+                        transition: padding 250ms ease-in-out;
+                    }
+                    &.active {
+                        width: 95px;
+                        height: 37px !important;
+                        border-radius: 4px;
+                        text-align: center;
+                        position: relative;
+                        span {
+                            display: block;
+                            text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.6);
+                            color: white;
+                            position: absolute;
+                            font-size: 15px;
+                            top: 8px;
+                            width: 100%;
+                        }
+                    }
+                }
+            }
+            h2 {
+                font-size: 18px;
+                font-weight: 400;
+                margin: 15px 0 2px 0;
+            }
+            .votes {
+                color: #666;
+                text-decoration: none;
+                cursor: pointer;
+                font-size: 15px;
+                span {
+                    margin-right: 5px;
+                    font-size: 12px;
+                }
+                &.voted {
+                    color: #E95787;
+                    pointer-events: none;
+                }
+            }
+        }
+    }
 }
