--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -76,6 +76,23 @@ input[type="submit"] {
     }
 }
 
+.hex-preview-wrapper {
+    display: flex;
+    align-content: center;
+    &:after {
+        content: ' ';
+        display: table;
+        clear: both;
+    }
+    .hex-preview {
+        height: 44px;
+        min-width: 44px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        margin-right: 10px;
+    }
+}
+
 #loading {
     width: 100%;
     height: 100vh;
@@ -194,9 +211,10 @@ input[type="submit"] {
         flex-wrap: wrap;
         li {
             list-style: none;
-            margin: 20px;
+            //margin: 20px;
+            padding: 20px;
             min-width: 260px;
-            width: calc((100% / 5) - 40px);
+            width: calc(100% / 5);
             text-align: center;
             .hex-group {
                 height: 75px;
